[package]
name = "ken-bot"
version = "0.1.0"
authors = ["ProfSucrose <dr.blobbles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
dotenv = "0.15.0"